ganymed library patched to support Session.ping() and Connection.ping() methods which are then used by SVNKit to detect stale SSH channel or connection.