@@ -12,26 +12,17 @@
 
 package org.tmatesoft.svn.core.internal.io.svn;
 
-import java.io.IOException;
 import java.io.OutputStream;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.List;
 import java.util.Map;
-import java.util.TreeMap;
 
 import org.tmatesoft.svn.core.ISVNDirEntryHandler;
 import org.tmatesoft.svn.core.ISVNLogEntryHandler;
 import org.tmatesoft.svn.core.SVNAuthenticationException;
 import org.tmatesoft.svn.core.SVNCancelException;
-import org.tmatesoft.svn.core.SVNDepth;
 import org.tmatesoft.svn.core.SVNDirEntry;
 import org.tmatesoft.svn.core.SVNErrorCode;
 import org.tmatesoft.svn.core.SVNErrorMessage;
@@ -39,19 +30,14 @@ import org.tmatesoft.svn.core.SVNException;
 import org.tmatesoft.svn.core.SVNLock;
 import org.tmatesoft.svn.core.SVNLogEntry;
 import org.tmatesoft.svn.core.SVNLogEntryPath;
-import org.tmatesoft.svn.core.SVNMergeInfo;
-import org.tmatesoft.svn.core.SVNMergeInfoInheritance;
 import org.tmatesoft.svn.core.SVNNodeKind;
 import org.tmatesoft.svn.core.SVNProperty;
 import org.tmatesoft.svn.core.SVNRevisionProperty;
 import org.tmatesoft.svn.core.SVNURL;
 import org.tmatesoft.svn.core.internal.delta.SVNDeltaReader;
-import org.tmatesoft.svn.core.internal.util.SVNDate;
 import org.tmatesoft.svn.core.internal.util.SVNPathUtil;
-import org.tmatesoft.svn.core.internal.wc.SVNDepthFilterEditor;
+import org.tmatesoft.svn.core.internal.util.SVNTimeUtil;
 import org.tmatesoft.svn.core.internal.wc.SVNErrorManager;
-import org.tmatesoft.svn.core.internal.wc.SVNFileUtil;
-import org.tmatesoft.svn.core.internal.wc.SVNMergeInfoManager;
 import org.tmatesoft.svn.core.io.ISVNEditor;
 import org.tmatesoft.svn.core.io.ISVNFileRevisionHandler;
 import org.tmatesoft.svn.core.io.ISVNLocationEntryHandler;
@@ -65,17 +51,10 @@ import org.tmatesoft.svn.core.io.SVNLocationEntry;
 import org.tmatesoft.svn.core.io.SVNRepository;
 
 /**
- * @author TMate Software Ltd.
  * @version 1.1.1
+ * @author  TMate Software Ltd.
  */
 public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
-
-    private static final String DIRENT_KIND = "kind";
-    private static final String DIRENT_SIZE = "size";
-    private static final String DIRENT_HAS_PROPS = "has-props";
-    private static final String DIRENT_CREATED_REV = "created-rev";
-    private static final String DIRENT_TIME = "time";
-    private static final String DIRENT_LAST_AUTHOR = "last-author";
 
     private SVNConnection myConnection;
     private String myRealm;
@@ -100,7 +79,7 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         if (url == null) {
             return;
         } else if (!url.getProtocol().equals(myLocation.getProtocol())) {
-            SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_NOT_IMPLEMENTED, "SVNRepository URL could not be changed from ''{0}'' to ''{1}''; create new SVNRepository instance instead", new Object[]{myLocation, url});
+            SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_NOT_IMPLEMENTED, "SVNRepository URL could not be changed from ''{0}'' to ''{1}''; create new SVNRepository instance instead", new Object[] {myLocation, url});
             SVNErrorManager.error(err);
         }
         if (forceReconnect) {
@@ -133,60 +112,61 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                 return true;
             }
             try {
-                Object[] buffer = new Object[]{"reparent", url.toString()};
+                Object[] buffer = new Object[] {"reparent", url.toString()};
                 write("(w(s))", buffer);
                 authenticate();
-                read("", null, true);
+                read("[()]", null, true);
 
                 String newLocation = url.toString();
                 String rootLocation = myRepositoryRoot.toString();
+                
+                if (!(newLocation.startsWith(rootLocation) && (newLocation.length() == rootLocation.length() || (newLocation.length() > rootLocation.length() && newLocation.charAt(rootLocation.length()) == '/')))) {
+                    return false;
+                }            
 
-                return newLocation.startsWith(rootLocation) && (newLocation.length() == rootLocation.length() || (newLocation.length() > rootLocation.length() && newLocation.charAt(rootLocation.length()) == '/'));
-
+                return true;
             } catch (SVNException e) {
                 if (e instanceof SVNCancelException || e instanceof SVNAuthenticationException) {
                     throw e;
                 }
-            }
+            }    
         }
         return false;
     }
 
     public long getLatestRevision() throws SVNException {
-        Object[] buffer = new Object[]{"get-latest-rev"};
-        List values = null;
+        Object[] buffer = new Object[] { "get-latest-rev" };
         try {
             openConnection();
             write("(w())", buffer);
             authenticate();
-            values = read("r", null, true);
+            buffer = read("[(N)]", buffer, true);
         } catch (SVNException e) {
             closeSession();
             throw e;
         } finally {
             closeConnection();
         }
-        return SVNReader.getLong(values, 0);
+        return SVNReader.getLong(buffer, 0);
     }
 
     public long getDatedRevision(Date date) throws SVNException {
         if (date == null) {
             date = new Date(System.currentTimeMillis());
         }
-        Object[] buffer = new Object[]{"get-dated-rev", date};
-        List values = null;
+        Object[] buffer = new Object[] { "get-dated-rev", date };
         try {
             openConnection();
             write("(w(s))", buffer);
             authenticate();
-            values = read("r", null, true);
+            buffer = read("[(N)]", buffer, true);
         } catch (SVNException e) {
             closeSession();
             throw e;
         } finally {
             closeConnection();
         }
-        return SVNReader.getLong(values, 0);
+        return SVNReader.getLong(buffer, 0);
     }
 
     public Map getRevisionProperties(long revision, Map properties) throws SVNException {
@@ -194,13 +174,13 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         if (properties == null) {
             properties = new HashMap();
         }
-        Object[] buffer = new Object[]{"rev-proplist", getRevisionObject(revision)};
+        Object[] buffer = new Object[] { "rev-proplist", getRevisionObject(revision) };
         try {
             openConnection();
             write("(w(n))", buffer);
             authenticate();
-            List items = read("l", null, true);
-            properties = SVNReader.getProperties(items, 0, properties);
+            buffer[0] = properties;
+            read("[((*P))]", buffer, true);
         } catch (SVNException e) {
             closeSession();
             throw e;
@@ -212,31 +192,30 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
 
     public String getRevisionPropertyValue(long revision, String propertyName) throws SVNException {
         assertValidRevision(revision);
-        Object[] buffer = new Object[]{"rev-prop", getRevisionObject(revision), propertyName};
-        List values = null;
+        Object[] buffer = new Object[] { "rev-prop", getRevisionObject(revision), propertyName };
         try {
             openConnection();
             write("(w(ns))", buffer);
             authenticate();
-            values = read("(?s)", null, true);
+            buffer = read("[((?S))]", buffer, true);
         } catch (SVNException e) {
             closeSession();
             throw e;
         } finally {
             closeConnection();
         }
-        return SVNReader.getString(values, 0);
+        return (String) buffer[0];
     }
 
     public SVNNodeKind checkPath(String path, long revision) throws SVNException {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[]{"check-path", path, getRevisionObject(revision)};
+            Object[] buffer = new Object[] { "check-path", path, getRevisionObject(revision) };
             write("(w(s(n)))", buffer);
             authenticate();
-            List values = read("w", null, true);
-            return SVNNodeKind.parseKind(SVNReader.getString(values, 0));
+            read("[(W)]", buffer, true);
+            return SVNNodeKind.parseKind((String) buffer[0]);
         } catch (SVNException e) {
             closeSession();
             throw e;
@@ -254,32 +233,26 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[]{"get-locations", path, getRevisionObject(pegRevision), revisions};
+            Object[] buffer = new Object[] { "get-locations", path, getRevisionObject(pegRevision), revisions };
             write("(w(sn(*n)))", buffer);
             authenticate();
-
             while (true) {
-                SVNItem item = readItem(true);
-                if (item.getKind() == SVNItem.WORD && "done".equals(item.getWord())) {
+                try {
+                    read("(NS)", buffer, false);
+                } catch (SVNException e) {
                     break;
-                } else if (item.getKind() != SVNItem.LIST) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Location entry not a list");
-                    SVNErrorManager.error(err);
-                } else {
-                    List values = SVNReader.parseTuple("rc", item.getItems(), null);
-                    count++;
-                    if (handler != null) {
-                        long revision = SVNReader.getLong(values, 0);
-                        String locationPath = SVNReader.getString(values, 1);
-                        locationPath = SVNPathUtil.canonicalizePath(locationPath);
-                        if (locationPath != null) {
-                            handler.handleLocationEntry(new SVNLocationEntry(revision, locationPath));
-                        }
+                }
+                count++;
+                if (handler != null) {
+                    long revision = SVNReader.getLong(buffer, 0);
+                    String location = SVNReader.getString(buffer, 1);
+                    if (location != null) {
+                        handler.handleLocationEntry(new SVNLocationEntry(revision, location));
                     }
                 }
             }
-
-            read("", null, true);
+            read("x", buffer, true);
+            read("[()]", buffer, true);
         } catch (SVNException e) {
             closeSession();
             handleUnsupportedCommand(e, "'get-locations' not implemented");
@@ -293,57 +266,22 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         Long rev = revision > 0 ? new Long(revision) : null;
         try {
             openConnection();
-            Object[] buffer = new Object[]{"get-file", getRepositoryPath(path), rev,
-                    Boolean.valueOf(properties != null), Boolean.valueOf(contents != null)};
+            Object[] buffer = new Object[] { "get-file", getRepositoryPath(path), rev, 
+                    Boolean.valueOf(properties != null), Boolean.valueOf(contents != null) };
             write("(w(s(n)ww))", buffer);
             authenticate();
-            List values = read("(?c)rl", null, true);
-
-            MessageDigest digest = null;
-            try {
-                digest = MessageDigest.getInstance("MD5");
-            } catch (NoSuchAlgorithmException e) {
-                SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.IO_ERROR, "MD5 implementation not found: {0}", e.getLocalizedMessage());
-                SVNErrorManager.error(err, e);
-            }
-            String expectedChecksum = SVNReader.getString(values, 0);
-
+            buffer[2] = properties;
+            buffer = read("[((?S)N(*P))]", buffer, true);
             if (properties != null) {
-                properties = SVNReader.getProperties(values, 2, properties);
-                properties.put(SVNProperty.REVISION, SVNReader.getString(values, 1));
-                properties.put(SVNProperty.CHECKSUM, expectedChecksum);
+                properties.put(SVNProperty.REVISION, buffer[1].toString());
+                properties.put(SVNProperty.CHECKSUM, buffer[0].toString());
             }
             if (contents != null) {
-                while (true) {
-                    SVNItem item = readItem(true);
-                    if (item.getKind() != SVNItem.STRING) {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Non-string as part of file contents");
-                        SVNErrorManager.error(err);
-                    }
-                    if (item.getLine().length == 0) {
-                        break;
-                    }
-                    if (expectedChecksum != null) {
-                        digest.update(item.getLine());
-
-                    }
-                    try {
-                        contents.write(item.getLine());
-                    } catch (IOException e) {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_IO_ERROR, e.getLocalizedMessage());
-                        SVNErrorManager.error(err);
-                    }
-                }
-                read("", null, true);
-                if (expectedChecksum != null) {
-                    String resultChecksum = SVNFileUtil.toHexDigest(digest);
-                    if (!expectedChecksum.equals(resultChecksum)) {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.CHECKSUM_MISMATCH, "Checksum mismatch for ''{0}''\nexpected checksum: ''{1}''\nactual checksum: ''{2}''", new Object[]{path, expectedChecksum, resultChecksum});
-                        SVNErrorManager.error(err);
-                    }
-                }
+                Object[] buffer2 = new Object[] { contents };
+                read("*I", buffer2, true);
+                read("[()]", buffer2, true);
             }
-            return SVNReader.getLong(values, 1);
+            return SVNReader.getLong(buffer, 1);
         } catch (SVNException e) {
             closeSession();
             throw e;
@@ -353,71 +291,33 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
     }
 
     public long getDir(String path, long revision, Map properties, final ISVNDirEntryHandler handler) throws SVNException {
-        return getDir(path, revision, properties, SVNDirEntry.DIRENT_ALL, handler);
-    }
-
-    public long getDir(String path, long revision, Map properties, int entryFields, final ISVNDirEntryHandler handler) throws SVNException {
         Long rev = getRevisionObject(revision);
         try {
             openConnection();
-
+            
             String fullPath = getFullPath(path);
             final SVNURL url = getLocation().setPath(fullPath, false);
             path = getRepositoryPath(path);
 
-            List individualProps = new LinkedList();
-            if ((entryFields & SVNDirEntry.DIRENT_KIND) != 0) {
-                individualProps.add(DIRENT_KIND);
-            }
-            if ((entryFields & SVNDirEntry.DIRENT_SIZE) != 0) {
-                individualProps.add(DIRENT_SIZE);
-            }
-            if ((entryFields & SVNDirEntry.DIRENT_HAS_PROPERTIES) != 0) {
-                individualProps.add(DIRENT_HAS_PROPS);
-            }
-            if ((entryFields & SVNDirEntry.DIRENT_CREATED_REVISION) != 0) {
-                individualProps.add(DIRENT_CREATED_REV);
-            }
-            if ((entryFields & SVNDirEntry.DIRENT_TIME) != 0) {
-                individualProps.add(DIRENT_TIME);
-            }
-            if ((entryFields & SVNDirEntry.DIRENT_LAST_AUTHOR) != 0) {
-                individualProps.add(DIRENT_LAST_AUTHOR);
-            }
-
-            Object[] buffer = new Object[]{"get-dir", path, rev,
+            Object[] buffer = new Object[] { "get-dir", path, rev,
                     Boolean.valueOf(properties != null),
-                    Boolean.valueOf(handler != null),
-                    individualProps.size() > 0 ?
-                            (String[]) individualProps.toArray(new String[individualProps.size()]) :
-                            null};
-            write("(w(s(n)ww(*w)))", buffer);
+                    Boolean.valueOf(handler != null) };
+            write("(w(s(n)ww))", buffer);
             authenticate();
-            List values = read("rll", null, true);
-            revision = values.get(0) != null ? SVNReader.getLong(values, 0) : revision;
 
-            if (properties != null) {
-                SVNReader.getProperties(values, 1, properties);
-            }
-
-            if (handler != null) {
-                List dirents = (List) values.get(2);
-                for (Iterator iterator = dirents.iterator(); iterator.hasNext();) {
-                    SVNItem item = (SVNItem) iterator.next();
-                    if (item.getKind() != SVNItem.LIST) {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Dirlist element not a list");
-                        SVNErrorManager.error(err);
-                    }
-                    List direntProps = SVNReader.parseTuple("cwnbr(?c)(?c)", item.getItems(), null);
-                    String name = SVNReader.getString(direntProps, 0);
-                    SVNNodeKind kind = SVNNodeKind.parseKind(SVNReader.getString(direntProps, 1));
-                    long size = SVNReader.getLong(direntProps, 2);
-                    boolean hasProps = SVNReader.getBoolean(direntProps, 3);
-                    long createdRevision = SVNReader.getLong(direntProps, 4);
-                    Date createdDate = SVNDate.parseDate(SVNReader.getString(direntProps, 5));
-                    String lastAuthor = SVNReader.getString(direntProps, 6);
-                    handler.handleDirEntry(new SVNDirEntry(url.appendPath(name, false), name, kind, size, hasProps, createdRevision, createdDate, lastAuthor));
+            buffer[1] = properties;
+            buffer = read("[(N(*P)", buffer, true);
+            revision = buffer[0] != null ? SVNReader.getLong(buffer, 0) : revision;
+            ISVNDirEntryHandler nestedHandler = new ISVNDirEntryHandler() {
+                public void handleDirEntry(SVNDirEntry dirEntry) throws SVNException {
+                    handler.handleDirEntry(new SVNDirEntry(url.appendPath(dirEntry.getName(), false), dirEntry.getName(), dirEntry.getKind(), dirEntry.getSize(), dirEntry.hasProperties(), dirEntry.getRevision(), dirEntry.getDate(), dirEntry.getAuthor()));
                 }
+            };
+            if (handler != null) {
+                buffer[0] = nestedHandler;
+                read("(*D)))", buffer, true);
+            } else {
+                read("()))", null, true);
             }
         } catch (SVNException e) {
             closeSession();
@@ -437,74 +337,48 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             final SVNURL url = getLocation().setPath(getFullPath(path), false);
             ISVNDirEntryHandler handler = new ISVNDirEntryHandler() {
                 public void handleDirEntry(SVNDirEntry dirEntry) throws SVNException {
-                    if (entries != null) {
-                        dirEntry = new SVNDirEntry(url.appendPath(dirEntry.getName(), false), dirEntry.getName(),
-                                dirEntry.getKind(), dirEntry.getSize(), dirEntry.hasProperties(), dirEntry.getRevision(), dirEntry.getDate(), dirEntry.getAuthor());
-                        entries.add(dirEntry);
-                    }
-                }
+                    dirEntry = new SVNDirEntry(url.appendPath(dirEntry.getName(), false), dirEntry.getName(), 
+                            dirEntry.getKind(), dirEntry.getSize(), dirEntry.hasProperties(), dirEntry.getRevision(), dirEntry.getDate(), dirEntry.getAuthor());
+                    entries.add(dirEntry);
+                }            
             };
             path = getRepositoryPath(path);
             // get parent
-            Object[] buffer = new Object[]{"stat", path, getRevisionObject(revision)};
+            Object[] buffer = new Object[] { "stat", path, getRevisionObject(revision) };
             write("(w(s(n)))", buffer);
             authenticate();
-            List values = read("(?l)", null, true);
-            values = (List) values.get(0);
-            if (values != null) {
-                List direntProps = SVNReader.parseTuple("cwnbr(?c)(?c)", values, null);
-                SVNNodeKind kind = SVNNodeKind.parseKind(SVNReader.getString(direntProps, 0));
-                long size = SVNReader.getLong(direntProps, 1);
-                boolean hasProps = SVNReader.getBoolean(direntProps, 2);
-                long createdRevision = SVNReader.getLong(direntProps, 3);
-                Date createdDate = SVNDate.parseDate(SVNReader.getString(direntProps, 4));
-                String lastAuthor = SVNReader.getString(direntProps, 5);
-                parentEntry = new SVNDirEntry(url, "", kind, size, hasProps, createdRevision, createdDate, lastAuthor);
-            }
+            read("[((?F))]", buffer, true);
+            parentEntry = (SVNDirEntry) buffer[0];
+            parentEntry = new SVNDirEntry(url, "", parentEntry.getKind(), parentEntry.getSize(), parentEntry.hasProperties(), parentEntry.getRevision(), parentEntry.getDate(), parentEntry.getAuthor());
 
             // get entries.
-            buffer = new Object[]{"get-dir", path, rev, Boolean.FALSE, Boolean.TRUE};
+            buffer = new Object[] { "get-dir", path, rev, Boolean.FALSE, Boolean.TRUE };
             write("(w(s(n)ww))", buffer);
             authenticate();
-            values = read("rll", null, true);
-            revision = values.get(0) != null ? SVNReader.getLong(values, 0) : revision;
-
+            buffer = read("[(N(*P)", buffer, true);
+            revision = buffer[0] != null ? SVNReader.getLong(buffer, 0) : revision;
             if (handler != null) {
-                List dirents = (List) values.get(2);
-                for (Iterator iterator = dirents.iterator(); iterator.hasNext();) {
-                    SVNItem item = (SVNItem) iterator.next();
-                    if (item.getKind() != SVNItem.LIST) {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Dirlist element not a list");
-                        SVNErrorManager.error(err);
-                    }
-                    List direntProps = SVNReader.parseTuple("cwnbr(?c)(?c)", item.getItems(), null);
-                    String name = SVNReader.getString(direntProps, 0);
-                    SVNNodeKind kind = SVNNodeKind.parseKind(SVNReader.getString(direntProps, 1));
-                    long size = SVNReader.getLong(direntProps, 2);
-                    boolean hasProps = SVNReader.getBoolean(direntProps, 3);
-                    long createdRevision = SVNReader.getLong(direntProps, 4);
-                    Date createdDate = SVNDate.parseDate(SVNReader.getString(direntProps, 5));
-                    String lastAuthor = SVNReader.getString(direntProps, 6);
-                    handler.handleDirEntry(new SVNDirEntry(url.appendPath(name, false), name, kind, size, hasProps, createdRevision, createdDate, lastAuthor));
-                }
+                buffer[0] = handler;
+                read("(*D)))", buffer, true);
+            } else {
+                read("()))", null, true);
             }
-
             // get comments.
-            if (includeComment && entries != null) {
+            if (includeComment) {
                 Map messages = new HashMap();
-                for (Iterator ents = entries.iterator(); ents.hasNext();) {
+                for(Iterator ents = entries.iterator(); ents.hasNext();) {
                     SVNDirEntry entry = (SVNDirEntry) ents.next();
                     Long key = getRevisionObject(entry.getRevision());
                     if (messages.containsKey(key)) {
                         entry.setCommitMessage((String) messages.get(key));
                         continue;
                     }
-                    buffer = new Object[]{"rev-prop", key, SVNRevisionProperty.LOG};
+                    buffer = new Object[] { "rev-prop", key, SVNRevisionProperty.LOG};
                     write("(w(ns))", buffer);
                     authenticate();
-                    values = read("(?s)", null, true);
-                    messages.put(key, SVNReader.getString(values, 0));
-                    entry.setCommitMessage(SVNReader.getString(values, 0));
+                    buffer = read("[((?S))]", buffer, true);
+                    messages.put(key, buffer[0]);
+                    entry.setCommitMessage((String) buffer[0]);
                 }
             }
         } catch (SVNException e) {
@@ -516,92 +390,85 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         return parentEntry;
     }
 
-    public int getFileRevisions(String path, long startRevision, long endRevision, boolean includeMergedRevisions,
-                                ISVNFileRevisionHandler handler) throws SVNException {
-        Long srev = getRevisionObject(startRevision);
-        Long erev = getRevisionObject(endRevision);
+    public int getFileRevisions(String path, long sRevision, long eRevision, ISVNFileRevisionHandler handler) throws SVNException {
+        Long srev = getRevisionObject(sRevision);
+        Long erev = getRevisionObject(eRevision);
+        int count = 0;
         SVNDeltaReader deltaReader = new SVNDeltaReader();
         try {
             openConnection();
-            Object[] buffer = new Object[]{"get-file-revs",
-                    getRepositoryPath(path),
-                    srev, erev, Boolean.toString(includeMergedRevisions)};
-            write("(w(s(n)(n)w))", buffer);
+            Object[] buffer = new Object[] { "get-file-revs",
+                    getRepositoryPath(path), srev, erev };
+            write("(w(s(n)(n)))", buffer);
             authenticate();
-            boolean hasRevision = false;
-            int count = 0;
+            buffer = new Object[5];
             while (true) {
-                SVNItem item = readItem(true);
-                if (item.getKind() == SVNItem.WORD && "done".equals(item.getWord())) {
-                    break;
-                }
-                hasRevision = true;
-                if (item.getKind() != SVNItem.LIST) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Revision entry not a list");
-                    SVNErrorManager.error(err);
-                }
-                List items = SVNReader.parseTuple("crll?B", item.getItems(), null);
-                String name = null;
                 SVNFileRevision fileRevision = null;
+                boolean skipDelta = false;
+                try {
+                    buffer = read("(SN(*P)(*Z)?S", buffer, false);
+                    if (buffer[4] != null && ((String) buffer[4]).length() == 0) {
+                        buffer[4] = null;
+                        skipDelta = true;
+                    } else {
+                        read(")", null, false);
+                    }
+                    count++;
+                } catch (SVNException e) {
+                    read("x", buffer, true);
+                    read("[()]", buffer, true);
+                    return count;
+                }
+                String name = null;
                 if (handler != null) {
-                    name = SVNReader.getString(items, 0);
-                    long revision = SVNReader.getLong(items, 1);
-                    Map properties = SVNReader.getProperties(items, 2, null);
-                    Map propertiesDelta = SVNReader.getPropertyDiffs(items, 3, null);
-                    boolean isMergedRevision = SVNReader.getBoolean(items, 4);
-
+                    name = (String) buffer[0];
+                    long revision = SVNReader.getLong(buffer, 1);
+                    Map properties = SVNReader.getMap(buffer, 2);
+                    Map propertiesDelta = SVNReader.getMap(buffer, 3);
                     if (name != null) {
                         fileRevision = new SVNFileRevision(name, revision,
-                                properties, propertiesDelta,
-                                isMergedRevision);
+                                properties, propertiesDelta);
                     }
+                    buffer[2] = null;
+                    buffer[3] = null;
                 }
-
-                SVNItem chunkItem = readItem(true);
-                if (chunkItem.getKind() != SVNItem.STRING) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Text delta chunk not a string");
-                    SVNErrorManager.error(err);
-                }
-                boolean hasDelta = chunkItem.getLine().length > 0;
-
                 if (handler != null && fileRevision != null) {
                     handler.openRevision(fileRevision);
                 }
-
-                if (hasDelta) {
+                if (skipDelta) {
                     if (handler != null) {
-                        handler.applyTextDelta(name == null ? path : name, null);
+                        handler.closeRevision(name == null ? path : name);
                     }
-                    while (true) {
-                        byte[] line = chunkItem.getLine();
-                        if (line == null || line.length == 0) {
-                            break;
+                    continue;
+                }
+                boolean windowRead = false;
+                while (true) {
+                    byte[] line = (byte[]) read("?W?B", buffer, true)[1];
+                    if (line == null) {
+                        // may be failure
+                        read("[]", buffer, true);
+                        break;
+                    } else if (line.length == 0) {
+                        // empty line, delta end.
+                        break;
+                    }
+                    // apply delta here.
+                    if (!windowRead) {
+                        if (handler != null) {
+                            handler.applyTextDelta(name == null ? path : name, null);
+                            windowRead = true;
                         }
-                        deltaReader.nextWindow(line, 0, line.length, name == null ? path : name, handler);
-                        chunkItem = readItem(true);
-                        if (chunkItem.getKind() != SVNItem.STRING) {
-                            SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Text delta chunk not a string");
-                            SVNErrorManager.error(err);
-                        }
                     }
-                    deltaReader.reset(name == null ? path : name, handler);
-                    if (handler != null) {
-                        handler.textDeltaEnd(name == null ? path : name);
-                    }
-
+                    deltaReader.nextWindow(line, 0, line.length, name == null ? path : name, handler);
+                }
+                deltaReader.reset(name == null ? path : name, handler);
+                if (windowRead) {
+                    handler.textDeltaEnd(name == null ? path : name);
                 }
                 if (handler != null) {
                     handler.closeRevision(name == null ? path : name);
-                    count++;
                 }
             }
-            read("", null, true);
-
-            if (!hasRevision) {
-                SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "The get-file-revs command didn't return any revisions");
-                SVNErrorManager.error(err);
-            }
-            return count;
         } catch (SVNException e) {
             closeSession();
             handleUnsupportedCommand(e, "'get-file-revs' not implemented");
@@ -611,150 +478,79 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         return -1;
     }
 
-    public int getFileRevisions(String path, long sRevision, long eRevision, ISVNFileRevisionHandler handler) throws SVNException {
-        return getFileRevisions(path, sRevision, eRevision, false, handler);
-    }
-
     public long log(String[] targetPaths, long startRevision, long endRevision,
-                    boolean changedPaths, boolean strictNode, long limit,
-                    boolean includeMergedRevisions, String[] revisionPropertyNames,
-                    ISVNLogEntryHandler handler) throws SVNException {
-
+            boolean changedPaths, boolean strictNode, long limit,
+            ISVNLogEntryHandler handler) throws SVNException {
         long count = 0;
-
+        
         long latestRev = -1;
         if (isInvalidRevision(startRevision)) {
             startRevision = latestRev = getLatestRevision();
         }
         if (isInvalidRevision(endRevision)) {
-            endRevision = latestRev != -1 ? latestRev : getLatestRevision();
+            endRevision = latestRev != -1 ? latestRev : getLatestRevision(); 
         }
-
+        
         try {
             openConnection();
             String[] repositoryPaths = getRepositoryPaths(targetPaths);
             if (repositoryPaths == null || repositoryPaths.length == 0) {
                 repositoryPaths = new String[]{""};
             }
-            if (repositoryPaths.length == 1 && "/".equals(repositoryPaths[0])) {
-                repositoryPaths[0] = "";
-            }
-
-            Object[] buffer;
-            boolean wantCustomRevProps = false;
-            if (revisionPropertyNames != null && revisionPropertyNames.length > 0) {
-                Object[] realBuffer = new Object[]{"log", repositoryPaths, getRevisionObject(startRevision),
-                        getRevisionObject(endRevision), Boolean.valueOf(changedPaths),
-                        Boolean.valueOf(strictNode), new Long(limit > 0 ? limit : 0),
-                        Boolean.valueOf(includeMergedRevisions), "revprops", revisionPropertyNames};
-                for (int i = 0; i < revisionPropertyNames.length; i++) {
-                    String propName = revisionPropertyNames[i];
-                    if (!SVNRevisionProperty.AUTHOR.equals(propName) &&
-                            !SVNRevisionProperty.DATE.equals(propName) &&
-                            !SVNRevisionProperty.LOG.equals(propName)) {
-                        wantCustomRevProps = true;
-                        break;
-                    }
-                }
-                buffer = realBuffer;
-                write("(w((*s)(n)(n)wwnww(*s)))", buffer);
-            } else {
-                buffer = new Object[]{"log",
-                        repositoryPaths, getRevisionObject(startRevision), getRevisionObject(endRevision),
-                        Boolean.valueOf(changedPaths), Boolean.valueOf(strictNode), new Long(limit > 0 ? limit : 0),
-                        Boolean.valueOf(includeMergedRevisions), "all-revprops"};
-
-                write("(w((*s)(n)(n)wwnww()))", buffer);
-            }
+            Object[] buffer = new Object[] { "log",
+                    repositoryPaths,
+                    getRevisionObject(startRevision),
+                    getRevisionObject(endRevision),
+                    Boolean.valueOf(changedPaths), Boolean.valueOf(strictNode),
+                    limit > 0 ? new Long(limit) : null };
+            write("(w((*s)(n)(n)wwn))", buffer);
             authenticate();
-
-
             while (true) {
-                SVNItem item = readItem(true);
-                if (item.getKind() == SVNItem.WORD && "done".equals(item.getWord())) {
-                    break;
-                }
-                if (item.getKind() != SVNItem.LIST) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Log entry not a list");
-                    SVNErrorManager.error(err);
-                }
-                List items = SVNReader.parseTuple("lr(?s)(?s)(?s)?BBnl", item.getItems(), null);
-                List changedPathsList = (List) items.get(0);
-                Map changedPathsMap = new HashMap();
-                if (changedPathsList != null && changedPathsList.size() > 0) {
-                    for (Iterator iterator = changedPathsList.iterator(); iterator.hasNext();) {
-                        SVNItem pathItem = (SVNItem) iterator.next();
-                        if (pathItem.getKind() != SVNItem.LIST) {
-                            SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Changed-path entry not a list");
-                            SVNErrorManager.error(err);
-                        }
-                        List pathItems = SVNReader.parseTuple("cw(?cr)", pathItem.getItems(), null);
-                        String path = SVNReader.getString(pathItems, 0);
-                        String action = SVNReader.getString(pathItems, 1);
-                        String copyPath = SVNReader.getString(pathItems, 2);
-                        long copyRevision = SVNReader.getLong(pathItems, 3);
-                        changedPathsMap.put(path, new SVNLogEntryPath(path, action.charAt(0), copyPath, copyRevision));
-                    }
-                }
-                count++;
-                long revision = 0;
-                Map revisionProperties = null;
-                boolean hasChildren = false;
-                if (handler != null && (limit <= 0 || count <= limit)) {
-                    revision = SVNReader.getLong(items, 1);
-                    String author = SVNReader.getString(items, 2);
-                    Date date = SVNReader.getDate(items, 3);
-                    if (date == SVNDate.NULL) {
-                        date = null;
-                    }
-                    String message = SVNReader.getString(items, 4);
-                    hasChildren = SVNReader.getBoolean(items, 6);
-                    boolean invalidRevision = SVNReader.getBoolean(items, 7);
-                    revisionProperties = SVNReader.getProperties(items, 8, null);
-                    if (invalidRevision) {
-                        revision = SVNRepository.INVALID_REVISION;
-                    }
-                    if (wantCustomRevProps && (revisionProperties == null || revisionProperties == Collections.EMPTY_MAP)) {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_NOT_IMPLEMENTED, "Server does not support custom revprops via log");
-                        SVNErrorManager.error(err);
-                    }
-
-                    if (revisionProperties == null || revisionProperties.isEmpty()) {
-                        revisionProperties = new HashMap();
-                    }
-
-                    if (revisionPropertyNames == null || revisionPropertyNames.length == 0) {
-                        if (author != null) {
-                            revisionProperties.put(SVNRevisionProperty.AUTHOR, author);
-                        }
-                        if (date != null) {
-                            revisionProperties.put(SVNRevisionProperty.DATE, date);
-                        }
-                        if (message != null) {
-                            revisionProperties.put(SVNRevisionProperty.LOG, message);
-                        }
-                    } else {
-                        for (int i = 0; i < revisionPropertyNames.length; i++) {
-                            String revPropName = revisionPropertyNames[i];
-                            if (author != null && SVNRevisionProperty.AUTHOR.equals(revPropName)) {
-                                revisionProperties.put(SVNRevisionProperty.AUTHOR, author);
-                            }
-                            if (date != null && SVNRevisionProperty.DATE.equals(revPropName)) {
-                                revisionProperties.put(SVNRevisionProperty.DATE, date);
-                            }
-                            if (message != null && SVNRevisionProperty.LOG.equals(revPropName)) {
-                                revisionProperties.put(SVNRevisionProperty.LOG, message);
+                try {
+                    read("((", buffer, false);
+                    Map changedPathsMap = null;
+                    if (changedPaths) {
+                        changedPathsMap = handler != null ? new HashMap() : null;
+                        while (true) {
+                            try {
+                                read("(SW(?S?N))", buffer, false);
+                                if (changedPathsMap != null) {
+                                    String path = SVNReader.getString(buffer, 0);
+                                    if (path != null && !"".equals(path.trim())) {
+                                        String type = SVNReader.getString(buffer, 1);
+                                        String copyPath = SVNReader.getString(buffer, 2);
+                                        long copyRev = SVNReader.getLong(buffer, 3);
+                                        changedPathsMap.put(path, new SVNLogEntryPath(path, type.charAt(0), copyPath, copyRev));
+                                    }
+                                }
+                            } catch (SVNException e) {
+                                break;
                             }
                         }
                     }
-                }
-                if (handler != null && (limit <= 0 || count <= limit)) {
-                    SVNLogEntry logEntry = new SVNLogEntry(changedPathsMap, revision, revisionProperties, hasChildren);
-                    handler.handleLogEntry(logEntry);
+                    read(")N(?S)(?S)(?S))", buffer, false);
+                    count++;
+                    if (handler != null && (limit <= 0 || count <= limit)) {
+                        long revision = SVNReader.getLong(buffer, 0);
+                        String author = SVNReader.getString(buffer, 1);
+                        Date date = SVNReader.getDate(buffer, 2);
+                        if (date == SVNTimeUtil.NULL) {
+                            date = null;
+                        }
+                        String message = SVNReader.getString(buffer, 3);
+                        handler.handleLogEntry(new SVNLogEntry(changedPathsMap, revision, author, date, message));
+                    }
+                } catch (SVNException e) {
+                    if (e instanceof SVNCancelException || e instanceof SVNAuthenticationException) {
+                        throw e;
+                    }
+                    read("x", buffer, true);
+                    if (limit <= 0 || (limit > 0 && count <= limit)) {
+                        read("[()]", buffer, true);
+                    }
+                    return count;
                 }
             }
-            read("", null, true);
-            return count;
         } catch (SVNException e) {
             closeSession();
             throw e;
@@ -764,14 +560,13 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
     }
 
     public void replay(long lowRevision, long highRevision, boolean sendDeltas, ISVNEditor editor) throws SVNException {
-        Object[] buffer = new Object[]{"replay", getRevisionObject(highRevision), getRevisionObject(lowRevision), Boolean.valueOf(sendDeltas)};
+        Object[] buffer = new Object[] { "replay", getRevisionObject(highRevision), getRevisionObject(lowRevision), Boolean.valueOf(sendDeltas) };
         try {
             openConnection();
             write("(w(nnw))", buffer);
             authenticate();
-            SVNEditModeReader editReader = new SVNEditModeReader(myConnection, editor);
-            editReader.driveEditor(true);
-            read("", null, true);
+            read("*E", new Object[] { editor }, true);
+            read("[()]", null, true);
         } catch (SVNException e) {
             closeSession();
             handleUnsupportedCommand(e, "Server doesn't support the replay command");
@@ -780,16 +575,116 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public void setRevisionPropertyValue(long revision, String propertyName,
-                                         String propertyValue) throws SVNException {
+    public void update(long revision, String target, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+        target = target == null ? "" : target;
+        Object[] buffer = new Object[] { "update", getRevisionObject(revision), target, Boolean.valueOf(recursive) };
+        try {
+            openConnection();
+            write("(w((n)sw))", buffer);
+            authenticate();
+            reporter.report(this);
+            authenticate();
+            read("*E", new Object[] { editor }, true);
+            write("(w())", new Object[] {"success"});
+            read("[()]", null, true);
+        } catch (SVNException e) {
+            closeSession();
+            throw e;
+        } finally {
+            closeConnection();
+        }
+    }
+
+    public void update(SVNURL url, long revision, String target, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+        target = target == null ? "" : target;
+        if (url == null) {
+            SVNErrorManager.error(SVNErrorMessage.create(SVNErrorCode.BAD_URL, "URL can not be NULL"));
+        }
+        Object[] buffer = new Object[] { "switch", getRevisionObject(revision),
+                target, Boolean.valueOf(recursive), url.toString() };
+        try {
+            openConnection();
+            write("(w((n)sws))", buffer);
+            authenticate();
+            reporter.report(this);
+            authenticate();
+            read("*E", new Object[] { editor }, true);
+            write("(w())", new Object[] {"success"});
+            read("[()]", null, true);
+        } catch (SVNException e) {
+            closeSession();
+            throw e;
+        } finally {
+            closeConnection();
+        }
+    }
+
+    public void diff(SVNURL url, long revision, String target, boolean ignoreAncestry, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+        diff(url, revision, revision, target, ignoreAncestry, recursive, reporter, editor);
+    }
+
+    public void diff(SVNURL url, long tRevision, long revision, String target, boolean ignoreAncestry, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+        diff(url, revision, revision, target, ignoreAncestry, recursive, true, reporter, editor);
+    }
+    
+    public void diff(SVNURL url, long tRevision, long revision, String target, boolean ignoreAncestry, boolean recursive, boolean getContents, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+        target = target == null ? "" : target;
+        if (url == null) {
+            SVNErrorManager.error(SVNErrorMessage.create(SVNErrorCode.BAD_URL, "URL can not be NULL"));
+        }
+        Object[] buffer = getContents ? new Object[] { "diff", getRevisionObject(tRevision),
+                target, Boolean.valueOf(recursive),
+                Boolean.valueOf(ignoreAncestry), url.toString() } :
+                        new Object[] { "diff", getRevisionObject(tRevision),
+                    target, Boolean.valueOf(recursive),
+                    Boolean.valueOf(ignoreAncestry), url.toString(), Boolean.valueOf(getContents) };
+        try {
+            openConnection();
+            write(getContents ? "(w((n)swws))" : "(w((n)swwsw))", buffer);
+            authenticate();
+            reporter.report(this);
+            authenticate();
+            read("*E", new Object[] { editor }, true);
+            write("(w())", new Object[] {"success"});
+            read("[()]", null, true);
+        } catch (SVNException e) {
+            closeSession();
+            throw e;
+        } finally {
+            closeConnection();
+        }
+    }
+
+    public void status(long revision, String target, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+        target = target == null ? "" : target;
+        Object[] buffer = new Object[] { "status", target,
+                Boolean.valueOf(recursive), getRevisionObject(revision) };
+        try {
+            openConnection();
+            write("(w(sw(n)))", buffer);
+            authenticate();
+            reporter.report(this);
+            authenticate();
+            read("*E", new Object[] { editor }, true);
+            write("(w())", new Object[] {"success"});
+            read("[()]", null, true);
+        } catch (SVNException e) {
+            closeSession();
+            throw e;
+        } finally {
+            closeConnection();
+        }
+    }
+
+    public void setRevisionPropertyValue(long revision, String propertyName, String propertyValue) throws SVNException {
         assertValidRevision(revision);
-        Object[] buffer = new Object[]{"change-rev-prop",
-                getRevisionObject(revision), propertyName, propertyValue};
+        Object[] buffer = new Object[] { "change-rev-prop",
+                getRevisionObject(revision), propertyName, propertyValue };
         try {
             openConnection();
             write("(w(nss))", buffer);
             authenticate();
-            read("", null, true);
+            read("[()]", buffer, true);
         } catch (SVNException e) {
             closeSession();
             throw e;
@@ -802,20 +697,20 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         try {
             openConnection();
             if (locks != null) {
-                write("(w(s(*l)w))", new Object[]{"commit", logMessage, locks, Boolean.valueOf(keepLocks)});
+                write("(w(s(*l)w))", new Object[] { "commit", logMessage, locks, Boolean.valueOf(keepLocks) });
             } else {
-                write("(w(s))", new Object[]{"commit", logMessage});
+                write("(w(s))", new Object[] { "commit", logMessage });
             }
             authenticate();
-            read("", null, true);
+            read("[()]", null, true);
             return new SVNCommitEditor(this, myConnection, new SVNCommitEditor.ISVNCommitCallback() {
-                public void run(SVNException error) {
-                    if (error != null) {
-                        closeSession();
-                    }
-                    closeConnection();
-                }
-            });
+                        public void run(SVNException error) {
+                            if (error != null) {
+                                closeSession();
+                            }
+                            closeConnection();
+                        }
+                    });
         } catch (SVNException e) {
             closeSession();
             closeConnection();
@@ -827,12 +722,11 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[]{"get-lock", path};
+            Object[] buffer = new Object[] { "get-lock", path };
             write("(w(s))", buffer);
             authenticate();
-            List items = read("(?l)", null, true);
-            items = (List) items.get(0);
-            return SVNReader.getLock(items);
+            read("[((?L))]", buffer, true);
+            return (SVNLock) buffer[0];
         } catch (SVNException e) {
             closeSession();
             handleUnsupportedCommand(e, "Server doesn't support the get-lock command");
@@ -846,25 +740,15 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[]{"get-locks", path};
+            Object[] buffer = new Object[] { "get-locks", path };
             write("(w(s))", buffer);
             authenticate();
-            List items = read("l", null, true);
-            items = (List) items.get(0);
-            Collection locks = new ArrayList();
-            for (Iterator iterator = items.iterator(); iterator.hasNext();) {
-                SVNItem item = (SVNItem) iterator.next();
-                if (item.getKind() != SVNItem.LIST) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Lock element not a list");
-                    SVNErrorManager.error(err);
-                }
-                SVNLock lock = SVNReader.getLock(item.getItems());
-                locks.add(lock);
-            }
-            return (SVNLock[]) locks.toArray(new SVNLock[locks.size()]);
+            read("[((*L))]", buffer, true);
+            Collection lockObjects = (Collection) buffer[0];
+            return lockObjects == null ? new SVNLock[0] : (SVNLock[]) lockObjects.toArray(new SVNLock[lockObjects.size()]);
         } catch (SVNException e) {
             closeSession();
-            handleUnsupportedCommand(e, "Server doesn't support the get-lock command");
+            handleUnsupportedCommand(e, "Server doesn't support the get-lock command");            
         } finally {
             closeConnection();
         }
@@ -874,7 +758,7 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
     public void lock(Map pathsToRevisions, String comment, boolean force, ISVNLockHandler handler) throws SVNException {
         try {
             openConnection();
-            Object[] buffer = new Object[]{"lock-many", comment, Boolean.valueOf(force)};
+            Object[] buffer = new Object[] { "lock-many", comment, Boolean.valueOf(force) };
             write("(w((s)w(", buffer);
             buffer = new Object[2];
             for (Iterator paths = pathsToRevisions.keySet().iterator(); paths.hasNext();) {
@@ -885,7 +769,7 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             write(")))", buffer);
             try {
                 authenticate();
-            } catch (SVNException e) {
+            } catch (SVNException e) {                
                 if (e.getErrorMessage() != null && e.getErrorMessage().getErrorCode() == SVNErrorCode.RA_SVN_UNKNOWN_CMD) {
                     closeSession();
                     closeConnection();
@@ -896,33 +780,14 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                 closeSession();
                 throw e;
             }
-            boolean done = false;
             for (Iterator paths = pathsToRevisions.keySet().iterator(); paths.hasNext();) {
                 String path = (String) paths.next();
                 SVNLock lock = null;
                 SVNErrorMessage error = null;
-                SVNItem item = readItem(true);
-                if (item.getKind() == SVNItem.WORD && "done".equals(item.getWord())) {
-                    done = true;
-                    break;
-                }
-                if (item.getKind() != SVNItem.LIST) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Lock response not a list");
-                    SVNErrorManager.error(err);
-                }
                 try {
-                    List values = SVNReader.parseTuple("wl", item.getItems(), null);
-                    String status = SVNReader.getString(values, 0);
-                    List items = (List) values.get(1);
-                    if ("success".equals(status)) {
-                        lock = SVNReader.getLock(items);
-                        path = lock.getPath();
-                    } else if ("failure".equals(status)) {
-                        SVNReader.handleFailureStatus(items);
-                    } else {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA);
-                        SVNErrorManager.error(err);
-                    }
+                    read("[L]", buffer, false);
+                    lock = (SVNLock) buffer[0];
+                    path = lock.getPath();
                 } catch (SVNException e) {
                     path = getRepositoryPath(path);
                     error = e.getErrorMessage();
@@ -931,14 +796,8 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                     handler.handleLock(path, lock, error);
                 }
             }
-            if (!done) {
-                SVNItem item = readItem(true);
-                if (item.getKind() != SVNItem.WORD || !"done".equals(item.getWord())) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Didn't receive end marker for lock responses");
-                    SVNErrorManager.error(err);
-                }
-            }
-            read("", null, true);
+            read("x", buffer, true);
+            read("[()]", buffer, true);
         } catch (SVNException e) {
             closeSession();
             handleUnsupportedCommand(e, "Server doesn't support the lock command");
@@ -946,25 +805,23 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             closeConnection();
         }
     }
-
+    
     private void lock12(Map pathsToRevisions, String comment, boolean force, ISVNLockHandler handler) throws SVNException {
-        for (Iterator paths = pathsToRevisions.keySet().iterator(); paths.hasNext();) {
+        for(Iterator paths = pathsToRevisions.keySet().iterator(); paths.hasNext();) {
             String path = (String) paths.next();
             Long revision = (Long) pathsToRevisions.get(path);
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[]{"lock", path, comment, Boolean.valueOf(force), revision};
+            Object[] buffer = new Object[] { "lock", path, comment, Boolean.valueOf(force), revision };
             write("(w(s(s)w(n)))", buffer);
             authenticate();
             SVNErrorMessage error = null;
-            List items = null;
             try {
-                items = read("l", null, false);
-                items = (List) items.get(0);
-            } catch (SVNException e) {
+                read("[(L)]", buffer, false);
+            } catch (SVNException e) {                
                 if (e.getErrorMessage() != null) {
                     SVNErrorCode code = e.getErrorMessage().getErrorCode();
                     if (code == SVNErrorCode.FS_PATH_ALREADY_LOCKED || code == SVNErrorCode.FS_OUT_OF_DATE) {
-                        error = e.getErrorMessage();
+                        error = e.getErrorMessage();                            
                     }
                 }
                 if (error == null) {
@@ -972,7 +829,7 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                 }
             }
             if (handler != null) {
-                SVNLock lock = items == null ? null : SVNReader.getLock(items);
+                SVNLock lock = (SVNLock) buffer[0];
                 handler.handleLock(path, lock, error);
             }
         }
@@ -981,7 +838,7 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
     public void unlock(Map pathToTokens, boolean force, ISVNLockHandler handler) throws SVNException {
         try {
             openConnection();
-            Object[] buffer = new Object[]{"unlock-many", Boolean.valueOf(force)};
+            Object[] buffer = new Object[] { "unlock-many", Boolean.valueOf(force) };
             write("(w(w(", buffer);
             buffer = new Object[2];
             for (Iterator paths = pathToTokens.keySet().iterator(); paths.hasNext();) {
@@ -1002,33 +859,13 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                 }
                 throw e;
             }
-            boolean done = false;
             for (Iterator paths = pathToTokens.keySet().iterator(); paths.hasNext();) {
                 String path = (String) paths.next();
                 String id = (String) pathToTokens.get(path);
                 SVNErrorMessage error = null;
                 try {
-                    SVNItem item = readItem(true);
-                    if (item.getKind() == SVNItem.WORD && "done".equals(item.getWord())) {
-                        done = true;
-                        break;
-                    }
-                    if (item.getKind() != SVNItem.LIST) {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Unlock response not a list");
-                        SVNErrorManager.error(err);
-                    }
-                    List values = SVNReader.parseTuple("wl", item.getItems(), null);
-                    String status = SVNReader.getString(values, 0);
-                    List items = (List) values.get(1);
-                    if ("success".equals(status)) {
-                        values = SVNReader.parseTuple("c", items, null);
-                        path = SVNReader.getString(values, 0);
-                    } else if ("failure".equals(status)) {
-                        SVNReader.handleFailureStatus(items);
-                    } else {
-                        SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA);
-                        SVNErrorManager.error(err);
-                    }
+                    read("[(S)]", buffer, false);
+                    path = (String) buffer[0];
                 } catch (SVNException e) {
                     error = e.getErrorMessage();
                 }
@@ -1037,14 +874,8 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                     handler.handleUnlock(path, new SVNLock(path, id, null, null, null, null), error);
                 }
             }
-            if (!done) {
-                SVNItem item = readItem(true);
-                if (item.getKind() != SVNItem.WORD || !"done".equals(item.getWord())) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Didn't receive end marker for unlock responses");
-                    SVNErrorManager.error(err);
-                }
-            }
-            read("", null, true);
+            read("x", buffer, true);
+            read("[()]", buffer, true);
         } catch (SVNException e) {
             closeSession();
             handleUnsupportedCommand(e, "Server doesn't support the unlock command");
@@ -1052,35 +883,32 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             closeConnection();
         }
     }
-
+    
     private void unlock12(Map pathToTokens, boolean force, ISVNLockHandler handler) throws SVNException {
         for (Iterator paths = pathToTokens.keySet().iterator(); paths.hasNext();) {
             String path = (String) paths.next();
             String id = (String) pathToTokens.get(path);
             path = getRepositoryPath(path);
-            if (id == null) {
-                Object[] buffer = new Object[]{"get-lock", path};
+            if (id  == null) {
+                Object[] buffer = new Object[] { "get-lock", path };
                 write("(w(s))", buffer);
                 authenticate();
-                List items = read("l", null, true);
-                items = (List) items.get(0);
-                SVNLock lock = SVNReader.getLock(items);
+                read("[((?L))]", buffer, true);
+                SVNLock lock = (SVNLock) buffer[0];
                 if (lock == null) {
                     lock = new SVNLock(path, "", null, null, null, null);
                     SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_NOT_LOCKED, "No lock on path ''{0}''", path);
-                    if (handler != null) {
-                        handler.handleUnlock(path, lock, err);
-                    }
+                    handler.handleUnlock(path, lock, err);
                     continue;
                 }
                 id = lock.getID();
             }
-            Object[] buffer = new Object[]{"unlock", path, id, Boolean.valueOf(force)};
+            Object[] buffer = new Object[] { "unlock", path, id, Boolean.valueOf(force) };
             write("(w(s(s)w))", buffer);
             authenticate();
             SVNErrorMessage error = null;
             try {
-                read("", null, true);
+                read("[()]", buffer, true);
             } catch (SVNException e) {
                 if (e.getErrorMessage() != null && e.getErrorMessage().getErrorCode() == SVNErrorCode.RA_NOT_LOCKED) {
                     error = e.getErrorMessage();
@@ -1102,21 +930,13 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             String fullPath = getFullPath(path);
             SVNURL url = getLocation().setPath(fullPath, false);
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[]{"stat", path, getRevisionObject(revision)};
+            Object[] buffer = new Object[] { "stat", path, getRevisionObject(revision) };
             write("(w(s(n)))", buffer);
             authenticate();
-            SVNDirEntry entry = null;
-            List items = read("(?l)", null, true);
-            items = (List) items.get(0);
-            if (items != null) {
-                List values = SVNReader.parseTuple("wnbr(?c)(?c)", items, null);
-                SVNNodeKind kind = SVNNodeKind.parseKind(SVNReader.getString(values, 0));
-                long size = SVNReader.getLong(values, 1);
-                boolean hasProperties = SVNReader.getBoolean(values, 2);
-                long createdRevision = SVNReader.getLong(values, 3);
-                Date createdDate = SVNDate.parseDate(SVNReader.getString(values, 4));
-                String lastAuthor = SVNReader.getString(values, 5);
-                entry = new SVNDirEntry(url, SVNPathUtil.tail(path), kind, size, hasProperties, createdRevision, createdDate, lastAuthor);
+            read("[((?F))]", buffer, true);
+            SVNDirEntry entry = (SVNDirEntry) buffer[0];
+            if (entry != null) {
+                entry = new SVNDirEntry(url, SVNPathUtil.tail(path), entry.getKind(), entry.getSize(), entry.hasProperties(), entry.getRevision(), entry.getDate(), entry.getAuthor());
             }
             return entry;
         } catch (SVNException e) {
@@ -1143,7 +963,7 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             closeSession();
         }
         if (myConnection != null) {
-            if (reparent(getLocation())) {
+            if (reparent(getLocation())) {                
                 return;
             }
             closeSession();
@@ -1159,7 +979,7 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             }
         }
     }
-
+    
     protected void closeConnection() {
         if (!getOptions().keepConnection(this)) {
             closeSession();
@@ -1167,7 +987,7 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         unlock();
         fireConnectionClosed();
     }
-
+    
     public String getRealm() {
         return myRealm;
     }
@@ -1185,44 +1005,54 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         myConnection.write(template, values);
     }
 
-    private List read(String template, List values, boolean readMalformedData) throws SVNException {
+    private Object[] read(String template, Object[] values, boolean readMalformedData) throws SVNException {
         if (myConnection == null) {
             SVNErrorManager.error(SVNErrorMessage.create(SVNErrorCode.RA_SVN_CONNECTION_CLOSED));
         }
         return myConnection.read(template, values, readMalformedData);
     }
 
-    private SVNItem readItem(boolean readMalformedData) throws SVNException {
-        if (myConnection == null) {
-            SVNErrorManager.error(SVNErrorMessage.create(SVNErrorCode.RA_SVN_CONNECTION_CLOSED));
-        }
-        return myConnection.readItem(readMalformedData);
-    }
-
     /*
      * ISVNReporter methods
      */
 
-    public void setPath(String path, String lockToken, long revision, boolean startEmpty) throws SVNException {
-        setPath(path, lockToken, revision, SVNDepth.INFINITY, startEmpty);
+    public void setPath(String path, String lockToken, long revision,  boolean startEmpty) throws SVNException {
+        assertValidRevision(revision);
+        if (lockToken == null) {
+            write("(w(snw))", new Object[] { "set-path", path,
+                    getRevisionObject(revision), Boolean.valueOf(startEmpty) });
+        } else {
+            write("(w(snw(s)))", new Object[] { "set-path", path,
+                    getRevisionObject(revision), Boolean.valueOf(startEmpty),
+                    lockToken });
+        }
     }
 
     public void deletePath(String path) throws SVNException {
-        write("(w(s))", new Object[]{"delete-path", path});
+        write("(w(s))", new Object[] { "delete-path", path });
     }
 
     public void linkPath(SVNURL url, String path,
-                         String lockToken, long revison, boolean startEmpty)
+            String lockToken, long revison, boolean startEmpty)
             throws SVNException {
-        linkPath(url, path, lockToken, revison, SVNDepth.INFINITY, startEmpty);
+        assertValidRevision(revison);
+        if (lockToken == null) {
+            write("(w(ssnw))", new Object[] { "link-path", path,
+                    url.toString(), getRevisionObject(revison),
+                    Boolean.valueOf(startEmpty) });
+        } else {
+            write("(w(ssnw(s)))", new Object[] { "link-path", path,
+                    url.toString(), getRevisionObject(revison),
+                    Boolean.valueOf(startEmpty), lockToken });
+        }
     }
 
     public void finishReport() throws SVNException {
-        write("(w())", new Object[]{"finish-report"});
+        write("(w())", new Object[] { "finish-report" });
     }
 
     public void abortReport() throws SVNException {
-        write("(w())", new Object[]{"abort-report"});
+        write("(w())", new Object[] { "abort-report" });
     }
 
     private String[] getRepositoryPaths(String[] paths) throws SVNException {
@@ -1266,225 +1096,12 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             unlock();
         }
     }
-
+    
     private void handleUnsupportedCommand(SVNException e, String message) throws SVNException {
         if (e.getErrorMessage() != null && e.getErrorMessage().getErrorCode() == SVNErrorCode.RA_SVN_UNKNOWN_CMD) {
             SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_NOT_IMPLEMENTED, message);
             SVNErrorManager.error(err, e.getErrorMessage());
         }
         throw e;
-    }
-
-    public void linkPath(SVNURL url, String path, String lockToken, long revison, SVNDepth depth, boolean startEmpty) throws SVNException {
-        assertValidRevision(revison);
-        write("(w(ssnw(s)w))", new Object[]{"link-path", path,
-                url.toString(), getRevisionObject(revison),
-                Boolean.valueOf(startEmpty), lockToken, SVNDepth.asString(depth)});
-    }
-
-    public void setPath(String path, String lockToken, long revision, SVNDepth depth, boolean startEmpty) throws SVNException {
-        assertValidRevision(revision);
-        write("(w(snw(s)w))", new Object[]{"set-path", path,
-                getRevisionObject(revision), Boolean.valueOf(startEmpty),
-                lockToken, SVNDepth.asString(depth)});
-    }
-
-    public void diff(SVNURL url, long targetRevision, long revision, String target, boolean ignoreAncestry,
-                     SVNDepth depth, boolean getContents, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
-        boolean recursive = getRecurseFromDepth(depth);
-        target = target == null ? "" : target;
-        if (url == null) {
-            SVNErrorManager.error(SVNErrorMessage.create(SVNErrorCode.BAD_URL, "URL can not be NULL"));
-        }
-
-        editor = getDepthFilterEditor(editor, depth, target != null);
-        Object[] buffer = new Object[]{"diff", getRevisionObject(targetRevision),
-                target, Boolean.valueOf(recursive),
-                Boolean.valueOf(ignoreAncestry), url.toString(),
-                Boolean.valueOf(getContents), SVNDepth.asString(depth)};
-        try {
-            openConnection();
-            write("(w((n)swwsww))", buffer);
-            authenticate();
-            reporter.report(this);
-            authenticate();
-
-            SVNEditModeReader editReader = new SVNEditModeReader(myConnection, editor);
-            editReader.driveEditor(false);
-            write("(w())", new Object[]{"success"});
-            read("", null, true);
-
-        } catch (SVNException e) {
-            closeSession();
-            throw e;
-        } finally {
-            closeConnection();
-        }
-    }
-
-    public void status(long revision, String target, SVNDepth depth, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
-        boolean recursive = getRecurseFromDepth(depth);
-        target = target == null ? "" : target;
-        editor = getDepthFilterEditor(editor, depth, target != null);
-        Object[] buffer = new Object[]{"status", target,
-                Boolean.valueOf(recursive), getRevisionObject(revision), SVNDepth.asString(depth)};
-        try {
-            openConnection();
-            write("(w(sw(n)w))", buffer);
-            authenticate();
-            reporter.report(this);
-            authenticate();
-
-            SVNEditModeReader editReader = new SVNEditModeReader(myConnection, editor);
-            editReader.driveEditor(false);
-            write("(w())", new Object[]{"success"});
-            read("", null, true);
-
-        } catch (SVNException e) {
-            closeSession();
-            throw e;
-        } finally {
-            closeConnection();
-        }
-    }
-
-    public void update(SVNURL url, long revision, String target, SVNDepth depth, ISVNReporterBaton reporter,
-                       ISVNEditor editor) throws SVNException {
-        boolean recursive = getRecurseFromDepth(depth);
-        target = target == null ? "" : target;
-        if (url == null) {
-            SVNErrorManager.error(SVNErrorMessage.create(SVNErrorCode.BAD_URL, "URL can not be NULL"));
-        }
-        editor = getDepthFilterEditor(editor, depth, target != null);
-        Object[] buffer = new Object[]{"switch", getRevisionObject(revision),
-                target, Boolean.valueOf(recursive), url.toString(), SVNDepth.asString(depth)};
-        try {
-            openConnection();
-            write("(w((n)swsw))", buffer);
-            authenticate();
-            reporter.report(this);
-            authenticate();
-
-            SVNEditModeReader editReader = new SVNEditModeReader(myConnection, editor);
-            editReader.driveEditor(false);
-            write("(w())", new Object[]{"success"});
-            read("", null, true);
-
-        } catch (SVNException e) {
-            closeSession();
-            throw e;
-        } finally {
-            closeConnection();
-        }
-    }
-
-    public void update(long revision, String target, SVNDepth depth, boolean sendCopyFromArgs,
-                       ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
-        target = target == null ? "" : target;
-        boolean recursive = getRecurseFromDepth(depth);
-        editor = getDepthFilterEditor(editor, depth, target != null);
-        Object[] buffer = new Object[]{"update", getRevisionObject(revision),
-                target, Boolean.valueOf(recursive), SVNDepth.asString(depth), Boolean.valueOf(sendCopyFromArgs)};
-
-        try {
-            openConnection();
-            write("(w((n)swww))", buffer);
-            authenticate();
-            reporter.report(this);
-            authenticate();
-
-            SVNEditModeReader editReader = new SVNEditModeReader(myConnection, editor);
-            editReader.driveEditor(false);
-            write("(w())", new Object[]{"success"});
-            read("", null, true);
-
-        } catch (SVNException e) {
-            closeSession();
-            throw e;
-        } finally {
-            closeConnection();
-        }
-    }
-
-    public Map getMergeInfo(String[] paths, long revision, SVNMergeInfoInheritance inherit) throws SVNException {
-        try {
-            openConnection();
-            if (!myConnection.isMergeInfo()) {
-                return new TreeMap();
-            }
-            String[] repositoryPaths = getRepositoryPaths(paths);
-            if (repositoryPaths == null || repositoryPaths.length == 0) {
-                repositoryPaths = new String[]{""};
-            }
-
-            Object[] buffer = new Object[]{"get-mergeinfo", repositoryPaths,
-                    getRevisionObject(revision), inherit.toString()};
-            write("(w((*s)(n)w))", buffer);
-            authenticate();
-
-            List items = read("(?l)", null, true);
-            items = (List) items.get(0);
-            Map pathsToMergeInfos = new HashMap();
-            for (Iterator iterator = items.iterator(); iterator.hasNext();) {
-                SVNItem item = (SVNItem) iterator.next();
-                if (item.getKind() != SVNItem.LIST) {
-                    SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_SVN_MALFORMED_DATA, "Merge info element is not a list");
-                    SVNErrorManager.error(err);
-                }
-                List values = SVNReader.parseTuple("cc", item.getItems(), null);
-                String path = SVNReader.getString(values, 0);
-                String mergeInfoToParse = SVNReader.getString(values, 1);
-                Map srcsToRangeLists = SVNMergeInfoManager.parseMergeInfo(new StringBuffer(mergeInfoToParse), null);
-                SVNMergeInfo mergeInfo = new SVNMergeInfo(path, srcsToRangeLists);
-                pathsToMergeInfos.put(path, mergeInfo);
-            }
-            return pathsToMergeInfos;
-        } catch (SVNException e) {
-            closeSession();
-            throw e;
-        } finally {
-            closeConnection();
-        }
-    }
-
-    protected ISVNEditor getCommitEditorInternal(Map locks, boolean keepLocks, Map revProps, ISVNWorkspaceMediator mediator) throws SVNException {
-        try {
-            openConnection();
-            String logMessage = (String) revProps.get(SVNRevisionProperty.LOG);
-            if (revProps.size() > 1 && !myConnection.isCommitRevprops()) {
-                SVNErrorMessage err = SVNErrorMessage.create(SVNErrorCode.RA_NOT_IMPLEMENTED, "Server doesn't support setting arbitrary revision properties during commit");
-                SVNErrorManager.error(err);
-            }
-
-            write("(w(s(*l)w(*l)))", new Object[]{"commit", logMessage,
-                    locks, Boolean.valueOf(keepLocks), revProps});
-
-            authenticate();
-            read("", null, true);
-            return new SVNCommitEditor(this, myConnection,
-                    new SVNCommitEditor.ISVNCommitCallback() {
-                        public void run(SVNException error) {
-                            if (error != null) {
-                                closeSession();
-                            }
-                            closeConnection();
-                        }
-                    });
-        } catch (SVNException e) {
-            closeConnection();
-            closeSession();
-            throw e;
-        }
-    }
-
-    private static boolean getRecurseFromDepth(SVNDepth depth) {
-        return depth == null || depth == SVNDepth.UNKNOWN || depth.compareTo(SVNDepth.FILES) > 0;
-    }
-
-    private ISVNEditor getDepthFilterEditor(ISVNEditor editor, SVNDepth depth, boolean hasTarget) {
-        if (depth != SVNDepth.FILES && depth != SVNDepth.INFINITY) {
-            return SVNDepthFilterEditor.getDepthFilterEditor(depth, editor, hasTarget);
-        }
-        return editor;
     }
 }
